# toctoc

./: .gitignore  CLAUDE.md  README.md  changes.md  install.sh  portier.conf.example  pyproject.toml
.github/workflows/: ci.yaml
anpr_gate/: __about__.py  __init__.py  anpr.py  config.py  container.py  gate_state.py  gui.py  main.py  portier.yaml.example  relay.py  run_gate.sh
anpr_gate/allowlist/: __init__.py  manager.py
anpr_gate/archive/: __init__.py  manager.py
anpr_gate/camera/: __init__.py  base.py  mock_camera.py  rtsp_camera.py  snapshot_camera.py
anpr_gate/detection/: __init__.py  base.py  mock_detector.py  pixel_diff_detector.py  yolo_detector.py
anpr_gate/gate/: __init__.py  controller.py  state.py
anpr_gate/gui/: __init__.py  app.py
anpr_gate/ocr/: __init__.py  base.py  easyocr_engine.py  mock_ocr.py
anpr_gate/relay/: __init__.py  base.py  http_relay.py  mock_relay.py
deploy/: deploy.sh  toctoc.service
tests/: conftest.py  test_allowlist.py  test_archive.py  test_config.py  test_detection.py  test_gate_controller.py  test_gate_state.py  test_ocr.py  test_relay.py
