[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toctoc-anpr"
version = "2.0.0"
description = "ANPR Gate Control System — Automatic Number Plate Recognition"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "ultralytics>=8.0",
    "easyocr>=1.7",
    "requests>=2.28",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.0",
    "Pillow>=10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.7",
]

[project.scripts]
toctoc = "anpr_gate.main:main"
toctoc-headless = "anpr_gate.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anpr_gate*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"